# trident

./: .env.example  .gitignore  LICENSE  README.md  TRIDENT_workspace_map.md  WORKLOG.md  pyproject.toml  server.py  situa.md  smoke_aigoat.py
backend/: .env.example  pyproject.toml  requirements.txt  run_web.cmd
backend/catalog/: CATALOG.md  oracle.md  packages.yaml  severity.md
backend/catalog/skills_catalog/trd-app-001/: SKILL.md
backend/catalog/skills_catalog/trd-app-007/: SKILL.md
backend/catalog/skills_catalog/trd-app-008/: SKILL.md
backend/catalog/skills_catalog/trd-app-r01/: SKILL.md
backend/catalog/skills_catalog/trd-mod-001/: SKILL.md
backend/catalog/skills_catalog/trd-mod-003/: SKILL.md
backend/catalog/skills_catalog/trd-mod-006/: SKILL.md
backend/catalog/skills_catalog/trd-prm-002/: SKILL.md
backend/catalog/skills_catalog/trd-prm-003/: SKILL.md
backend/catalog/skills_catalog/trd-prm-r01/: SKILL.md
backend/manifests/: aigoat.yaml  sample.yaml  sample_attack.yaml
backend/src/: cli.py
backend/src/agents/: factory.py
backend/src/core/: client.py
backend/src/nl/: advisor.py  scope_to_scan.py
backend/src/orchestrator/: coordinator.py  scope_tool.py
backend/src/reports/: html_report.py  json_report.py  remediation_enrich.py
backend/src/skills/: converter_factory.py  pyrit_bootstrap.py  pyrit_runner.py  pyrit_tools.py  registry.py  trident_prompt_target.py  web_search.py
backend/src/targets/: aigoat.py  oracle.py
backend/src/web/: engine.py  logbus.py  server.py
backend/targets/: echo.yaml
catalog/: CATALOG.md  application.yaml  model.yaml  oracle.md  packages.yaml  prompt.yaml  scorers.md  strategies.md
catalog/schema/: catalog.schema.json
frontend/: bridge.js  frontend.html  index.html  sample.trace.jsonl
manifests/: aigoat.yaml  aigoat_l0_prompt_injection.yaml  aigoat_l0_prompt_obfuscated.yaml  sample.yaml  sample_attack.yaml
src/: cli.py
src/agents/: briefs.py  factory.py
targets/: aigoat.yaml  echo.yaml  target_profile.example.yaml
(+53 files in other folders)
